--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Alex Smith</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <h1>王 贵 通</h1>
+      <p>我是 <span class="typed" data-typed-items=" 开发者, 咨询分析师, 业余棋手"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -94,7 +94,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>数据挖掘 &amp; WEB开发 &amp; 数仓开发</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -102,18 +102,18 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>出生日期:</strong> <span>1993.11</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>网站:</strong> <span>www.guitong.wang</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>邮箱:</strong> <span>wangguitong07@163.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>城市:</strong> <span>辽宁, 大连</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>年龄:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>学历:</strong> <span>硕士</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>家庭成员:</strong> <span>Me, 婷婷，若涵（2周岁的狗狗）</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>婚姻状态:</strong> <span>已婚</span></li>
                 </ul>
               </div>
             </div>
@@ -123,7 +123,6 @@
             </p>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
 
