--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Guitong Wang - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -95,9 +95,8 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>数据挖掘 &amp; WEB开发 &amp; 数仓开发</h3>
-            <p class="fst-italic">
-              努力成为一名全栈开发工程师!
-            </p>
+<!--             <p class="fst-italic">
+            </p> -->
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -117,7 +116,10 @@
               </div>
             </div>
             <p>
-              自嘲本是后山人，偶坐前堂客，醉舞经阁半卷书，坐井说天阔，大志戏功名，海斗量福祸，论到囊中羞涩时，怒指乾坤错。
+              自嘲本是后山人，偶坐前堂客，\n
+              醉舞经阁半卷书，坐井说天阔，\n
+              大志戏功名，海斗量福祸，\n
+              论到囊中羞涩时，怒指乾坤错。
             </p>
           </div>
         </div>
