--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>王 贵 通</h1>
-      <p>我是 <span class="typed" data-typed-items=" 全栈工程师, 咨询分析师, 业余棋手"></span></p>
+      <p>我是 <span class="typed" data-typed-items="全栈工程师, 咨询分析师, 业余棋手"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -255,7 +255,7 @@
               <h5>2020 - 2021</h5>
               <p><em>大连 高新</em></p>
               <ul>
-                <li>在结构化数据挖掘、续航精度预测、图像识别、文本挖掘、音频分析</li>
+                <li>电商数据分析、续航精度预测、图像识别、文本挖掘、音频分析</li>
                 <!-- <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
