--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>王 贵 通</h1>
+      <h1>王 贵 通 Rainco's Cofounder</h1>
       <p>我是 <span class="typed" data-typed-items="全栈工程师, 咨询分析师, 业余棋手"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -213,8 +213,8 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Guitong Wang</h4>
-              <p><em>2015年本科毕业，拥有7年的WEB开发经验(SpringBoot、Flask、Django、Laravel)，5年的数据挖掘经验（机器学习、深度学习、强化学习、运筹优化、启发式算法）
-                多个行业经验(教育、物流、机械、咨询等)
+              <p><em>2015年本科毕业，拥有7年的WEB开发经验(SpringBoot、Flask、Django、Laravel)，5年的数据挖掘经验（机器学习、深度学习、强化学习、运筹优化、启发式算法），
+                多个行业经验(教育、物流、机械、汽车、电商、咨询等)
               </em></p>
               <ul>
                 <li>辽宁 大连</li>
@@ -244,7 +244,7 @@
               <h5>2015 - 2020</h5>
               <p><em>上海 松江区/北京 海淀</em></p>
               <ul>
-                <li>仓库管理软件开发、在线教育管理软件开发、办公自动化软件开发、</li>
+                <li>仓库管理软件、在线教育管理软件、办公自动化软件</li>
                 <!-- <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
                 <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
                 <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
@@ -277,13 +277,6 @@
 
       </div>
     </section><!-- End Resume Section -->
-
-    
-
-   
-
-  
-
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
