--- a/index.html
+++ b/index.html
@@ -141,22 +141,22 @@
             </div>
 
             <div class="progress">
-              <span class="skill">数仓搭建、模型开发 <i class="val">80%</i></span>
+              <span class="skill">复杂系统建模、系统仿真优化<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">复杂系统建模\系统仿真优化 <i class="val">85%</i></span>
+              <span class="skill">数仓搭建、模型开发<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">WEB前后端开发、小程序、公众号 <i class="val">70%</i></span>
+              <span class="skill">WEB前后端开发、小程序、公众号<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -180,15 +180,15 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Matlab <i class="val">75%</i></span>
+              <span class="skill">Matlab <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">R、Scala、netlogo、lingo、Anylogic <i class="val">65%</i></span>
+              <span class="skill">R、Scala、netlogo、lingo、Anylogic <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
