--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>王 贵 通 Rainco's Cofounder</h1>
+      <h1>王 贵 通    Rainco's Cofounder</h1>
       <p>我是 <span class="typed" data-typed-items="全栈工程师, 咨询分析师, 业余棋手"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -101,19 +101,17 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>年龄:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>年龄:</strong> <span>29</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>学历:</strong> <span>硕士</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>家庭成员:</strong> <span>Me</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>兴趣点:</strong> <span>解决有挑战的问题！</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>兴趣点:</strong> <span>解决有挑战的问题，进入Flow state！</span></li>
                 </ul>
               </div>
             </div>
-            <p>
-              自嘲本是后山人，偶坐前堂客，</p>
+            <p>自嘲本是后山人，偶坐前堂客，</p>
              <p> 醉舞经阁半卷书，坐井说天阔，</p>
              <p> 大志戏功名，海斗量福祸，</p>
               <p>论到囊中羞涩时，怒指乾坤错。</p>
-            </p>
           </div>
         </div>
       </div>
@@ -228,48 +226,39 @@
               <h4>管理科学与工程 &amp; 信息管理与信息系统</h4>
               <h5>2017 - 2020</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
-              <p>主修机器学习、数据挖掘和推荐系统</p>
+              <p>机器学习、数据挖掘、数据仓库、启发式算法、个性化推荐系统、Hadoop</p>
             </div>
             <div class="resume-item">
               <h4>管理科学与工程 &amp; 工业工程</h4>
               <h5>2012 - 2015</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
-              <p>主修机械工程与工业管理相关</p></p>
+              <p>机械工程、工业工程、系统工程、管理信息系统、运筹学</p></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">工作经验</h3>
             <div class="resume-item">
-              <h4>初级开发工程师</h4>
+              <h4>开发工程师</h4>
               <h5>2015 - 2020</h5>
-              <p><em>上海 松江区/北京 海淀</em></p>
+              <p><em>上海 松江区/北京 海淀区</em></p>
               <ul>
-                <li>仓库管理软件、在线教育管理软件、办公自动化软件</li>
-                <!-- <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
+                <li>仓库管理系统（WMS）、生产执行系统（MES）、学习管理系统（LMS）、办公自动化软件（OA）、屏幕缺陷检测系统、直播互动软件、进销存管理系统、教务管理系统</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>算法工程师</h4>
               <h5>2020 - 2021</h5>
-              <p><em>大连 高新</em></p>
+              <p><em>大连 高新区</em></p>
               <ul>
-                <li>电商数据分析、续航精度预测、图像识别、文本挖掘、音频分析</li>
-                <!-- <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
+                <li>电商数据分析、续航精度预测、光学字符识别、评论文本挖掘、朗读效果评价</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>数据科学</h4>
+              <h4>数据科学顾问</h4>
               <h5>2022 - 至今</h5>
-              <p><em>大连 高新</em></p>
+              <p><em>大连 高新区</em></p>
               <ul>
-                <li>管理咨询顾问、数据挖掘分析，客户生命周期估值、仓储优化、学习路径推荐、反欺诈策略分析</li>
-                <!-- <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
+                <li>客户生命周期估值、仓储系统优化、学习路径推荐、反欺诈策略分析、金融产品推荐、时间序列预测与异常检测</li>
               </ul>
             </div>
           </div>
@@ -283,9 +272,6 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <!-- <p>心理学家研究表明，最有力度的个人转变源于经历了绝不想再经历的错误所造成的痛苦——“跌到谷底”。所以，对于让别人或你自己获得此类经历，不要犹豫。虽然说表扬人们他们干得好，这点很重要，但更重要的是，要指出他们的缺点，让他们反思。
-      解决问题比做顺利的事更花时间。要把问题找出来、搞清楚、解决掉，而运行顺利的事则可以略少些关注。相比于庆祝自己有多出色，我们则更关注自己哪些方面应该改进，这才成就了我们的卓越。</p> -->
-        </div>
 
         <div class="row" data-aos="fade-in">
 
@@ -306,7 +292,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>18524293252</p>
+                <p>185242932**</p>
               </div>
 
               <iframe width="504" height="425" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://j.map.baidu.com/s/YtBuFb"></iframe>
