--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="resume-item">
               <h4>算法工程师</h4>
               <h5>2018 - 2021</h5>
-              <p><em>大连 高新区</em></p>
+              <p><em>北京 海淀区/大连 高新区</em></p>
               <ul>
                 <li>电商数据分析、续航精度预测、光学字符识别、评论文本挖掘、朗读效果评价、个性化推荐（教育、电商）、智能辅导系统</li>
               </ul>
