--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Guitong Wang - Index</title>
+  <title>Mason</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,14 +40,17 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Guitong Wang</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
+        <h1 class="text-light"><a href="index.html">Mason</a></h1>
+      <div class="social-links mt-3 text-center">
+  <a href="#" class="wechat">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M12 0c-6.627 0-12 4.975-12 11.111 0 3.497 1.745 6.616 4.472 8.652v4.237l4.086-2.242c1.09.301 2.246.464 3.442.464 6.627 0 12-4.974 12-11.111 0-6.136-5.373-11.111-12-11.111zm1.193 14.963l-3.056-3.259-5.963 3.259 6.559-6.963 3.13 3.259 5.889-3.259-6.559 6.963z"/>
+    </svg>
+  </a>
+  <a href="#" class="xiaohongshu"><i class="bx bx-book-bookmark"></i></a>
+  <a href="#" class="official-account"><i class="bx bx-comment"></i></a>
+  <a href="#" class="video-channel"><i class="bx bx-video"></i></a>
+</div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
@@ -66,8 +69,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>王 贵 通    Rainco's Cofounder</h1>
-      <p>我是 <span class="typed" data-typed-items="全栈工程师, 咨询分析师, 业余棋手"></span></p>
+      <h1>Guitong Wang  Rainco's Founder</h1>
+      <p>我是 <span class="typed" data-typed-items="全栈工程师, 咨询分析师, 数据科学家, 业余棋手"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -101,17 +104,19 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>年龄:</strong> <span>29</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>年龄:</strong> <span>32</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>学历:</strong> <span>硕士</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>家庭成员:</strong> <span>Me</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>状态:</strong> <span>创业ing</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>兴趣点:</strong> <span>解决有挑战的问题，进入Flow state！</span></li>
                 </ul>
               </div>
             </div>
-            <p>自嘲本是后山人，偶坐前堂客，</p>
-             <p> 醉舞经阁半卷书，坐井说天阔，</p>
-             <p> 大志戏功名，海斗量福祸，</p>
-              <p>论到囊中羞涩时，怒指乾坤错。</p>
+<div class="poem-text">
+  <p class="text-center text-lg-left larger-text">自嘲本是后山人，偶坐前堂客，</p>
+  <p class="text-center text-lg-left larger-text">醉舞经阁半卷书，坐井说天阔，</p>
+  <p class="text-center text-lg-left larger-text">大志戏功名，海斗量福祸，</p>
+  <p class="text-center text-lg-left larger-text">论到囊中羞涩时，怒指乾坤错。</p>
+</div>
           </div>
         </div>
       </div>
@@ -126,13 +131,13 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>努力成为一个麻烦解决者、持续优化者和高价值输出伙伴。专注做好三件事：读书、行路、与有意思的人交流。</p>
+          <p>专注做好三件事：读书、行路、与有意思的人交流。</p>
         </div>
 
         <div class="row skills-content">
-
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">数据挖掘、运筹优化 <i class="val">95%</i></span>
+              <span class="skill">数据科学、运筹优化 <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -146,19 +151,25 @@
             </div>
 
             <div class="progress">
-              <span class="skill">数仓搭建、模型开发<i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-            <div class="progress">
-              <span class="skill">WEB前后端开发、小程序、公众号<i class="val">80%</i></span>
+              <span class="skill">数仓搭建、模型开发<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">前端开发(React\Vue)、小程序、公众号<i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
+            <div class="progress">
+              <span class="skill">需求分析、产品经理<i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -183,13 +194,20 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+
             <div class="progress">
-              <span class="skill">R、Scala、netlogo、lingo、Anylogic <i class="val">75%</i></span>
+              <span class="skill">R、Scala <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">netlogo、lingo、Anylogic <i class="val">65%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
           </div>
 
         </div>
@@ -210,15 +228,16 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Guitong Wang</h4>
-              <p><em>2015年本科毕业，拥有7年的WEB开发经验(SpringBoot、Flask、Django、Laravel)，5年的数据挖掘经验（机器学习、深度学习、强化学习、运筹优化、启发式算法），
-                多个行业经验(教育、物流、机械、汽车、电商、咨询等)
-              </em></p>
-              <ul>
+              <h4>工作经验简介</h4>
+<p class="lead text-right"><em>2015年本科毕业，具备十一年专业Web全栈开发经验，精通SpringBoot、Django及Laravel等主流开发框架，并拥有八年数据科学领域实战经验，涵盖机器学习、深度学习、强化学习、运筹优化及启发式算法等多个方向。
+跨行业项目经历丰富，曾服务于教育、物流、机械制造、汽车、电子商务及专业咨询等多个领域。历任东软集团、德勤管理咨询交付工程师职务，主导或参与多家国际知名企业与大型机构的数字化解决方案交付，
+客户涵盖东亚银行、宝马中国、恒力重工、理想汽车、东风岚图、中国石油、吉利汽车、苏宁仓储、京东物流、英特尔及海力士等行业领军企业。具备深厚的技术架构设计与业务咨询能力，善于将前沿技术与行业实际需求相结合，提供高可用系统设计与数据驱动的决策支持方案。
+</em></p>
+              <!-- <ul>
                 <li>辽宁 大连</li>
                 <li>18524293252</li>
                 <li>wangguitong07@163.com</li>
-              </ul>
+              </ul> -->
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -226,12 +245,14 @@
               <h4>管理科学与工程 &amp; 信息管理与信息系统</h4>
               <h5>2017 - 2020</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
+                <p>>主导智能辅导系统架构设计与工程化部署实施</p>
               <p>机器学习、数据挖掘、数据仓库、启发式算法、个性化推荐系统、Hadoop</p>
             </div>
             <div class="resume-item">
               <h4>管理科学与工程 &amp; 工业工程</h4>
               <h5>2012 - 2015</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
+               <p>提前一年完成学业并获得学位</p>
               <p>机械工程、工业工程、系统工程、管理信息系统、运筹学</p></p>
             </div>
           </div>
@@ -255,10 +276,19 @@
             </div>
             <div class="resume-item">
               <h4>数据科学顾问</h4>
-              <h5>2022 - 至今</h5>
-              <p><em>大连 高新区</em></p>
+              <h5>2021 - 2023</h5>
+              <p><em>大连/北京</em></p>
               <ul>
                 <li>客户生命周期估值、仓储系统优化、学习路径推荐、反欺诈策略分析、金融产品推荐、时间序列预测与异常检测</li>
+              </ul>
+            </div>
+                        <div class="resume-item">
+              <h4>创业</h4>
+              <h5>2023 - 至今</h5>
+              <p><em>大连 高新区</em></p>
+              <ul>
+                <li>大连睿亭信息咨询有限公司 CTO</li>
+                <li>人工智能大连研究院 研究员</li>
               </ul>
             </div>
           </div>
@@ -280,7 +310,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>辽宁 大连 高新园区 小平岛</p>
+                <p>辽宁 大连 高新园区 万科创智中心/p>
               </div>
 
               <div class="email">
@@ -292,7 +322,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>185242932**</p>
+                <p>18524293252</p>
               </div>
 
               <iframe width="504" height="425" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://j.map.baidu.com/s/YtBuFb"></iframe>
